_docs/Guides/am/3.x/quickstart/authenticate-users.adoc
= Authenticate users with Identity Provider
:page-sidebar: am_3_x_sidebar
:page-permalink: am/current/am_quickstart_authenticate_users.html
:page-folder: am/quickstart
:page-layout: am

== Create a security domain

A _security domain_ is a series of security policies apply to a set of applications that all share common security mechanisms for authentication, authorization and identity management.

NOTE: If you have already a security domain, you can skip this part

. Go to http://GRAVITEEIO-AM-UI-HOST. (Default Administrator account is `admin/adminadmin`)
. From the homepage, click `Create a Security Domain` button
. Give your security domain a *name*, a *description* and press `CREATE`
. Last step, enable your domain by clicking on the banner `click here` link.

NOTE: You can create new security domains from the user menu (top right)

[source]
----
# create domain
curl -H "Authorization: Bearer :accessToken" \
     -H "Content-Type:application/json;charset=UTF-8" \
     -X POST \
     -d '{"name":"My First Security Domain","description":"My First Security Domain description"}' \
     http://GRAVITEEIO-AM-MGT-API-HOST/management/organizations/DEFAULT/environments/DEFAULT/domains


# enable domain
curl -H "Authorization: Bearer :accessToken" \
     -H "Content-Type:application/json;charset=UTF-8" \
     -X PATCH \
     -d '{"enabled": true}' \
     http://GRAVITEEIO-AM-MGT-API-HOST/management/organizations/DEFAULT/environments/DEFAULT/domains/:domainId
----

== Create an application

Before interact with the AM Authorization Gateway, you must create an application.
The application will give you the necessary information (like the client ID/client Secret) for authentication and authorization.
The application can be a native mobile app, a single page front-end web app, or a regular web app that executes on a server.

Create your first application by following these steps :

. Go to `Applications` section and click `(+)` button
. Choose `Web` application type, click `Next` button
. Give your application a *name*, a *redirect URI* (with https scheme and non localhost) and press `Create`

NOTE: This application will be used by End-Users, let’s bind them with identity providers.

== Create an identity provider

An _identity provider_ is usually a service used to authenticate and communicate authorization and user information.
It can be social providers like Facebook, Google or Twitter, enterprise provider such as an Active Directory or custom providers like Databases.

NOTE: For the convenience of this quick start, we will create an In-memory identity provider with an inline users configuration.

. Go to the `Settings` section
. Go to `Providers` section
. From the providers page, click `(+)` button
. Choose the `Inline` and press `Next`

image::am/current/graviteeio-am-quickstart-idp-type.png[]

[start=5]
. Give your identity provider a *name* and create a user by filling out the user form and press `Create`

image::am/current/graviteeio-am-quickstart-create-idp.png[]

[source]
----
curl -H "Authorization: Bearer :accessToken" \
     -H "Content-Type:application/json;charset=UTF-8" \
     -X POST \
     -d '{
           "external": false,
           "type": "inline-am-idp",
           "configuration": "{\"users\":[{\"firstname\":\"John\",\"lastname\":\"Doe\",\"username\":\"johndoe\",\"password\":\"johndoepassword\"}]}",
           "name": "Inline IdP"
         }' \
     http://GRAVITEEIO-AM-MGT-API-HOST/management/organizations/DEFAULT/environments/DEFAULT/domains/:securityDomainPath/identities
----

[start=6s]
. Go back to your web application
. Go to `Identity Providers tab`, select Inline identity provider and then press `SAVE`

image::am/current/graviteeio-am-quickstart-client-idp.png[]

NOTE: Your web application is now completely set up

== Test your identity provider with OAuth2

NOTE: For the convenience of this quick start, we will use the link:https://tools.ietf.org/html/rfc6749#section-1.3.3[Resource Owner Password Credentials flow], the default flow should be the link:https://tools.ietf.org/html/rfc6749#section-1.3.1[Authorization Code flow] with an Login Page display to the End-User.

OAuth 2 is an authorization framework that let applications acting on behalf the end user to obtain limited access to HTTP services.
link:https://tools.ietf.org/html/rfc6749[OAuth 2 RFC^] defines two endpoints :

- The *authorization endpoint* used to interact with the resource owner and obtain an authorization grant via user-agent redirection.
- The *token endpoint* used by the client to obtain an access token by presenting its authorization grant.

NOTE: For further information about OAuth2, please visit the link:https://tools.ietf.org/html/rfc6749[RFC page^].

In order to validate the identity provider configuration, we will request for an access token.

Request a token::

[source]
----
curl -X POST \
  'http://GRAVITEEIO-AM-GATEWAY-HOST/:domainPath/oauth/token \
  -H 'Content-Type: application/x-www-form-urlencoded' \
  -H 'Authorization: Basic Base64.encode64(:clientId + ':' + :clientSecret)' \
  -d 'grant_type=passsword' \
  -d 'username=:username' \
  -d 'password=:passsword'
----

[width="100%",cols="2,8",frame="topbot",options="header,footer"]
|==========================
|Parameter       |Description
|grant_type      |*REQUIRED.* Set the value to `password`.
|client_id       |*REQUIRED.* Client's ID. (Basic Auth)
|client_secret   |*REQUIRED.* Client's secret. (Basic Auth)
|username        |*REQUIRED.* User's name.
|password        |*REQUIRED.* User's password.
|scope           |*OPTIONAL.* The scopes of the access token.
|==========================

If everything goes well, you should see the following response :

[source]
----
HTTP/1.1 200 OK
Content-Type: application/json;charset=UTF-8
Cache-Control: no-cache, no-store, max-age=0, must-revalidate
Pragma: no-cache
{
    "access_token" : "eyJraWQiOiJkZWZhdWx0LWdyYXZpdGVlLUFNLWtleSIsImFsZyI6IkhTMjU2In0.eyJzdWIiOiI0NTM...QW5rN0h2SEdUOFNMYyJ9.w8A9yKJcuFbE_SYmRRAdGBEz-6nnXg7rdv1S4JD9xGI",
    "token_type": "bearer",
    "expires_in": 7199
}
----
